--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=msCocinaApplication
+spring.datasource.url=jdbc:mysql://localhost:3306/Modulo_Cocina?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=SENA2025
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port = 8081
