--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=msCocinaApplication
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crudmenu
+spring.datasource.username=root
+spring.datasource.password=Carlos2515.
+
+
+#que quiero utilizar un driver mas especifico
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# elementos que permite tener un trabajo mas de la mano con sql
+
+spring.jpa.show-sql:true
+
+
+
+#actualizar el esquema cada que se ejecute ddl es el lenguaje de descripcion de datos cuando se crean las tablas  
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.open-in-view=false
