--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=msCocinaApplication
-spring.datasource.url=jdbc:mysql://localhost:3306/Modulo_Cocina?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://dpg-d50c067pm1nc73eke510-a.virginia-postgres.render.com/modulo_cocina
 spring.datasource.username=root
-spring.datasource.password=JUAN1003
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=IrGaHYhWFVCal0e2UBM0kklzx9mxWqXM
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=8083
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8085
