--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=msCocinaApplication
 spring.datasource.url=jdbc:postgresql://dpg-d50c067pm1nc73eke510-a.virginia-postgres.render.com/modulo_cocina
-spring.datasource.username=root
-spring.datasource.password=IrGaHYhWFVCal0e2UBM0kklzx9mxWqXM
+spring.datasource.username=db-cocina
+spring.datasource.password=EPWSkXssOQrrWmzmUR0Q6aEvJKLqP7Zn
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
